--- a/Moderna/index.html
+++ b/Moderna/index.html
@@ -14,7 +14,9 @@
   <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Roboto:300,300i,400,400i,500,500i,700,700i&display=swap" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Roboto:300,300i,400,400i,500,500i,700,700i&display=swap"
+    rel="stylesheet">
 
   <!-- Vendor CSS Files -->
   <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -53,7 +55,7 @@
           <li class="active"><a href="index.html">Home</a></li>
           <li><a href="about.html">About Us</a></li>
           <li><a href="services.html">Services</a></li>
-         <li><a href="portfolio.html">Portfolio</a></li>
+          <li><a href="portfolio.html">Portfolio</a></li>
           <li><a href="team.html">Team</a></li>
           <li><a href="blog.html">Blog</a></li>
           <li class="drop-down"><a href="">Drop Down</a>
@@ -88,11 +90,12 @@
       <div class="carousel-item active">
         <div class="carousel-container">
           <h2 class="animated fadeInDown">Welcome to <span>Imagineer</span></h2>
-          <p class="animated fadeInUp">Imagineer is a Makeathon being organized with the intent of bringing together students from
-              various walks of life to collaborate, ideate and solve problems omnipresent at NITK, by
-              developing effective and innovative prototypes. The vision of the event is to create an
-              incentivised culture of innovation in our college in order to give rise to the next
-              generation of innovators.</p>
+          <p class="animated fadeInUp">Imagineer is a Makeathon being organized with the intent of bringing together
+            students from
+            various walks of life to collaborate, ideate and solve problems omnipresent at NITK, by
+            developing effective and innovative prototypes. The vision of the event is to create an
+            incentivised culture of innovation in our college in order to give rise to the next
+            generation of innovators.</p>
           <!-- <a href="" class="btn-get-started animated fadeInUp"></a> -->
         </div>
       </div>
@@ -179,7 +182,8 @@
         <div class="row">
           <div class="col-lg-6 video-box">
             <img src="assets/img/why-us.jpg" class="img-fluid" alt="">
-            <a href="https://youtu.be/JKphE5HfmM8" class="venobox play-btn mb-4" data-vbtype="video" data-autoplay="true"></a>
+            <a href="https://youtu.be/JKphE5HfmM8" class="venobox play-btn mb-4" data-vbtype="video"
+              data-autoplay="true"></a>
           </div>
 
           <div class="col-lg-6 d-flex flex-column justify-content-center p-5">
@@ -187,13 +191,15 @@
             <div class="icon-box">
               <div class="icon"><i class="bx bx-fingerprint"></i></div>
               <h4 class="title"><a href="">Lorem Ipsum</a></h4>
-              <p class="description">Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident</p>
+              <p class="description">Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint
+                occaecati cupiditate non provident</p>
             </div>
 
             <div class="icon-box">
               <div class="icon"><i class="bx bx-gift"></i></div>
               <h4 class="title"><a href="">Nemo Enim</a></h4>
-              <p class="description">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque</p>
+              <p class="description">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis
+                praesentium voluptatum deleniti atque</p>
             </div>
 
           </div>
@@ -201,15 +207,99 @@
 
       </div>
     </section><!-- End Why Us Section -->
+    <!-- Event Schedule -->
+    <div id="schedule" class="section">
+      <!-- container -->
+      <div class="container">
+        <!-- row -->
+        <div class="row">
+          <!-- section title -->
+          <div class="container" style="margin-top: 2vh;width: 100%;text-align: center;">
+            <h1 class="title" style="display: inline-block;"><span>Event</span> <span style="color: #68A4C4;">Schedule</span></h3>
+          </div>
+          <!-- /section title -->
 
+          <div class="col-md-8 col-md-offset-2" style="margin-top: 2vh;">
+
+            <div class="events-wrapper">
+              <!-- event -->
+              <div class="event">
+                <div class="event-day">
+                  <div>
+                    <span class="day">25 </span>
+                    <span class="year">Feb, 2020</span>
+                  </div>
+                </div>
+                <div class="event-content">
+                  <br>
+                  <h3 class="event-title">Open meet and Release of problem Statements</p>
+                </div>
+              </div>
+              <!-- /event -->
+
+              <div class="event">
+                <div class="event-day">
+                  <div>
+                    <span class="day">4</span>
+                    <span class="year">March, 2020</span>
+                  </div>
+                </div>
+                <div class="event-content">
+                  <br>
+                  <h3 class="event-title">Brainstorming Session</p>
+                </div>
+              </div>
+
+              <div class="event">
+                <div class="event-day">
+                  <div>
+                    <span class="day">7</span>
+                    <span class="year">Mar, 2019</span>
+                  </div>
+                </div>
+                <div class="event-content">
+                  <br>
+                  <h3 class="event-title">Prototyping Session</p>
+                </div>
+              </div>
+
+              <div class="event">
+                <div class="event-day">
+                  <div>
+                    <span class="day">8</span>
+                    <span class="year">Mar, 2019</span>
+                  </div>
+                </div>
+                <br>
+                <div class="event-content">
+                  <h3 class="event-title">Judging and Declaration of winners</p>
+                </div>
+              </div>
+
+              
+
+              <div class="event">
+                <div class="event-hour"></div>
+                <div class="event-content">
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!-- /row -->
+      </div>
+      <!-- /container -->
+    </div>
+    <!-- /Event Schedule -->
     <!-- ======= Features Section ======= -->
     <section class="features">
       <div class="container">
 
         <div class="section-title">
           <h2>Open Meet on 25th February</h2>
-          <h3>Intrigued to know the theme? Wondering what kind of problems we have for you this time? Attend the open meet for imagineer tomorrow and get your answers to all these questions and more.
-We'll see you at the MSH starting at 6PM tomorrow</h3><br><br>
+          <h3>Intrigued to know the theme? Wondering what kind of problems we have for you this time? Attend the open
+            meet for imagineer tomorrow and get your answers to all these questions and more.
+            We'll see you at the MSH starting at 6PM tomorrow</h3><br><br>
           <p></p>
         </div>
 
@@ -220,7 +310,7 @@ We'll see you at the MSH starting at 6PM tomorrow</h3><br><br>
           <div class="col-md-7 pt-4">
             <h2> How Imagineer works</h2>
             <h3></h3>
-           <!--  <p class="font-italic">
+            <!--  <p class="font-italic">
               Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
               magna aliqua.
             </p>
@@ -238,11 +328,13 @@ We'll see you at the MSH starting at 6PM tomorrow</h3><br><br>
           <div class="col-md-7 pt-5 order-2 order-md-1">
             <h3>Corporis temporibus maiores provident</h3>
             <p class="font-italic">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+              dolore
               magna aliqua.
             </p>
             <p>
-              Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
+              Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
+              voluptate
               velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
               culpa qui officia deserunt mollit anim id est laborum
             </p>
@@ -255,7 +347,8 @@ We'll see you at the MSH starting at 6PM tomorrow</h3><br><br>
           </div>
           <div class="col-md-7 pt-5">
             <h3>Sunt consequatur ad ut est nulla consectetur reiciendis animi voluptas</h3>
-            <p>Cupiditate placeat cupiditate placeat est ipsam culpa. Delectus quia minima quod. Sunt saepe odit aut quia voluptatem hic voluptas dolor doloremque.</p>
+            <p>Cupiditate placeat cupiditate placeat est ipsam culpa. Delectus quia minima quod. Sunt saepe odit aut
+              quia voluptatem hic voluptas dolor doloremque.</p>
             <ul>
               <li><i class="icofont-check"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat.</li>
               <li><i class="icofont-check"></i> Duis aute irure dolor in reprehenderit in voluptate velit.</li>
@@ -271,11 +364,13 @@ We'll see you at the MSH starting at 6PM tomorrow</h3><br><br>
           <div class="col-md-7 pt-5 order-2 order-md-1">
             <h3>Quas et necessitatibus eaque impedit ipsum animi consequatur incidunt in</h3>
             <p class="font-italic">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+              dolore
               magna aliqua.
             </p>
             <p>
-              Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
+              Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
+              voluptate
               velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
               culpa qui officia deserunt mollit anim id est laborum
             </p>
@@ -335,7 +430,7 @@ We'll see you at the MSH starting at 6PM tomorrow</h3><br><br>
           <div class="col-lg-3 col-md-6 footer-contact">
             <h4>Contact Us</h4>
             <p>
-          
+
               Vybhav Pai <br>
               <strong>Phone:</strong> +91 8970595234<br>
               Aditya Rastogi <br>
@@ -364,13 +459,13 @@ We'll see you at the MSH starting at 6PM tomorrow</h3><br><br>
       <div class="copyright">
         &copy; Copyright <strong><span>Moderna</span></strong>. All Rights Reserved
       </div> -->
-      <div class="credits">
-        <!-- All the links in the footer should remain intact. -->
-        <!-- You can delete the links only if you purchased the pro version. -->
-        <!-- Licensing information: https://bootstrapmade.com/license/ -->
-        <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/free-bootstrap-template-corporate-moderna/ -->
-        Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
-      </div>
+    <div class="credits">
+      <!-- All the links in the footer should remain intact. -->
+      <!-- You can delete the links only if you purchased the pro version. -->
+      <!-- Licensing information: https://bootstrapmade.com/license/ -->
+      <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/free-bootstrap-template-corporate-moderna/ -->
+      Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+    </div>
     </div>
   </footer><!-- End Footer -->
 
