--- a/Moderna/index.html
+++ b/Moderna/index.html
@@ -51,12 +51,12 @@
       <nav class="nav-menu float-right d-none d-lg-block">
         <ul>
           <li class="active"><a href="index.html">Home</a></li>
-          <li><a href="about.html">About Us</a></li>
-          <li><a href="services.html">Services</a></li>
-         <li><a href="portfolio.html">Portfolio</a></li>
-          <li><a href="team.html">Team</a></li>
-          <li><a href="blog.html">Blog</a></li>
-          <li class="drop-down"><a href="">Drop Down</a>
+          <li><a href="#about">About Us</a></li>
+          <li><a href="#timeline">Timeline</a></li>
+         <li><a href="#rules">Rules</a></li>
+<!--           <li><a href="#problems">Problem Statements</a></li>
+ -->          <li><a href="#contact">Contact</a></li>
+          <!-- <li class="drop-down"><a href="">Drop Down</a>
             <ul>
               <li><a href="#">Drop Down 1</a></li>
               <li class="drop-down"><a href="#">Drop Down 2</a>
@@ -67,14 +67,13 @@
                   <li><a href="#">Deep Drop Down 4</a></li>
                   <li><a href="#">Deep Drop Down 5</a></li>
                 </ul>
-              </li>
-              <li><a href="#">Drop Down 3</a></li>
+              </li> -->
+              <!-- <li><a href="#">Drop Down 3</a></li>
               <li><a href="#">Drop Down 4</a></li>
-              <li><a href="#">Drop Down 5</a></li>
+              <li><a href="#">Drop Down 5</a></li> -->
             </ul>
-          </li>
-          <li><a href="contact.html">Contact Us</a></li>
-        </ul>
+          <!-- </li>
+          <li><a href="contact.html">Contact Us</a></li> -->
       </nav><!-- .nav-menu -->
 
     </div>
@@ -172,35 +171,7 @@
       </div>
     </section> End Services Section -->
 
-    <!-- ======= Why Us Section ======= -->
-    <section class="why-us section-bg" data-aos="fade-up" date-aos-delay="200">
-      <div class="container">
-
-        <div class="row">
-          <div class="col-lg-6 video-box">
-            <img src="assets/img/why-us.jpg" class="img-fluid" alt="">
-            <a href="https://youtu.be/JKphE5HfmM8" class="venobox play-btn mb-4" data-vbtype="video" data-autoplay="true"></a>
-          </div>
-
-          <div class="col-lg-6 d-flex flex-column justify-content-center p-5">
-
-            <div class="icon-box">
-              <div class="icon"><i class="bx bx-fingerprint"></i></div>
-              <h4 class="title"><a href="">Lorem Ipsum</a></h4>
-              <p class="description">Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident</p>
-            </div>
-
-            <div class="icon-box">
-              <div class="icon"><i class="bx bx-gift"></i></div>
-              <h4 class="title"><a href="">Nemo Enim</a></h4>
-              <p class="description">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque</p>
-            </div>
-
-          </div>
-        </div>
-
-      </div>
-    </section><!-- End Why Us Section -->
+    
 
     <!-- ======= Features Section ======= -->
     <section class="features">
@@ -213,13 +184,12 @@ We'll see you at the MSH starting at 6PM tomorrow</h3><br><br>
           <p></p>
         </div>
 
-        <div class="row" data-aos="fade-up">
+        <div id="about" class="row" data-aos="fade-up">
           <div class="col-md-5">
-            <img src="assets/img/features-1.svg" class="img-fluid" alt="">
+            <img src="assets/img/picture1.jpg" class="img-fluid" alt="">
           </div>
           <div class="col-md-7 pt-4">
-            <h2> How Imagineer works</h2>
-            <h3></h3>
+            <h3> How Imagineer works</h3>
            <!--  <p class="font-italic">
               Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
               magna aliqua.
@@ -236,7 +206,7 @@ We'll see you at the MSH starting at 6PM tomorrow</h3><br><br>
             <img src="assets/img/features-2.svg" class="img-fluid" alt="">
           </div>
           <div class="col-md-7 pt-5 order-2 order-md-1">
-            <h3>Corporis temporibus maiores provident</h3>
+            <h3>Imagineer 19 Throwback</h3>
             <p class="font-italic">
               Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
               magna aliqua.
@@ -254,7 +224,7 @@ We'll see you at the MSH starting at 6PM tomorrow</h3><br><br>
             <img src="assets/img/features-3.svg" class="img-fluid" alt="">
           </div>
           <div class="col-md-7 pt-5">
-            <h3>Sunt consequatur ad ut est nulla consectetur reiciendis animi voluptas</h3>
+            <h3>Testimonies from Previous winners</h3>
             <p>Cupiditate placeat cupiditate placeat est ipsam culpa. Delectus quia minima quod. Sunt saepe odit aut quia voluptatem hic voluptas dolor doloremque.</p>
             <ul>
               <li><i class="icofont-check"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat.</li>
@@ -269,7 +239,7 @@ We'll see you at the MSH starting at 6PM tomorrow</h3><br><br>
             <img src="assets/img/features-4.svg" class="img-fluid" alt="">
           </div>
           <div class="col-md-7 pt-5 order-2 order-md-1">
-            <h3>Quas et necessitatibus eaque impedit ipsum animi consequatur incidunt in</h3>
+            <h3>Rules to Follow</h3>
             <p class="font-italic">
               Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
               magna aliqua.
@@ -305,7 +275,29 @@ We'll see you at the MSH starting at 6PM tomorrow</h3><br><br>
         </div>
       </div>
     </div> -->
+    <!-- ======= Why Us Section ======= -->
+    <section class="why-us section-bg" data-aos="fade-up" date-aos-delay="200">
+      <div class="container">
 
+        <div class="row">
+          <div class="col-lg-6 video-box">
+            <img src="assets/img/why-us.jpg" class="img-fluid" alt="">
+            <a href="https://youtu.be/JKphE5HfmM8" class="venobox play-btn mb-4" data-vbtype="video" data-autoplay="true"></a>
+          </div>
+
+          <div class="col-lg-6 d-flex flex-column justify-content-center p-5">
+
+            <div class="icon-box">
+              <!-- <div class="icon"><i class="bx bx-fingerprint"></i></div> -->
+              <h4 class="title"><a href=""></a></h4>
+              <p class="description"><a href="https://youtu.be/JKphE5HfmM8" class="venobox mb-4" data-vbtype="video" data-autoplay="true">Here's a Throwback to Imagineer 2019 edition!!</a></p>
+            </div>
+
+          </div>
+        </div>
+
+      </div>
+    </section><!-- End Why Us Section -->
     <div class="footer-top">
       <div class="container">
         <div class="row">
@@ -332,7 +324,7 @@ We'll see you at the MSH starting at 6PM tomorrow</h3><br><br>
             </ul>
           </div> -->
 
-          <div class="col-lg-3 col-md-6 footer-contact">
+          <div id="contact" class="col-lg-3 col-md-6 footer-contact">
             <h4>Contact Us</h4>
             <p>
           
