--- a/Moderna/index.html
+++ b/Moderna/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Moderna Bootstrap Template - Index</title>
+  <title>Imagineer</title>
   <meta content="" name="descriptison">
   <meta content="" name="keywords">
 
@@ -81,7 +81,7 @@
       <!-- Slide 1 -->
       <div class="carousel-item active">
         <div class="carousel-container">
-          <h2 class="animated fadeInDown">Welcome to <span>Imagineer</span></h2>
+          <h2 class="animated fadeInDown">Dream.<br>Design.<br>Develop. <!-- <span></span> --></h2>
           <p class="animated fadeInUp">Imagineer is a Makeathon being organized with the intent of bringing together
             students from
             various walks of life to collaborate, ideate and solve problems omnipresent at NITK, by
@@ -194,7 +194,7 @@
 
         <div class="row" data-aos="fade-up">
           <div class="col-md-5 order-1 order-md-2">
-            <img src="assets/img/features-2.svg" class="img-fluid" alt="">
+            <img src="assets/img/throwback.jpg" class="img-fluid" alt="">
           </div>
           <div class="col-md-7 pt-5 order-2 order-md-1">
             <h3>Imagineer 19 Throwback</h3>
@@ -214,7 +214,7 @@
 
         <div class="row" data-aos="fade-up">
           <div class="col-md-5">
-            <img src="assets/img/features-3.svg" class="img-fluid" alt="">
+            <img src="assets/img/test.jpg" class="img-fluid" alt="">
           </div>
           <div class="col-md-7 pt-5">
             <h3>Testimonies from Previous winners</h3>
@@ -317,7 +317,7 @@
     <!-- /Event Schedule -->
         <div class="row" data-aos="fade-up">
           <div class="col-md-5 order-1 order-md-2">
-            <img src="assets/img/features-4.svg" class="img-fluid" alt="">
+            <img src="assets/img/rules.jpg" class="img-fluid" alt="">
           </div>
           <div class="col-md-7 pt-5 order-2 order-md-1">
             <h3>Rules to Follow</h3>
@@ -372,8 +372,8 @@
 
             <div class="icon-box">
               <!-- <div class="icon"><i class="bx bx-fingerprint"></i></div> -->
-              <h4 class="title"><a href=""></a></h4>
-              <p class="description"><a href="https://youtu.be/JKphE5HfmM8" class="venobox mb-4" data-vbtype="video" data-autoplay="true">Here's a Throwback to Imagineer 2019 edition!!</a></p>
+              <h4 class="title"><a href="">Here's a Throwback to Imagineer 2019 edition!!</a></h4>
+              <p class="description"><a href="https://youtu.be/JKphE5HfmM8" class="venobox mb-4" data-vbtype="video" data-autoplay="true"></a></p>
             </div>
 
           </div>
@@ -444,7 +444,7 @@
       <!-- You can delete the links only if you purchased the pro version. -->
       <!-- Licensing information: https://bootstrapmade.com/license/ -->
       <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/free-bootstrap-template-corporate-moderna/ -->
-      Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+      Designed by <a href="https://bootstrapmade.com/">Imagineer Website Team</a>
     </div>
     </div>
   </footer><!-- End Footer -->
