--- a/Moderna/index.html
+++ b/Moderna/index.html
@@ -82,7 +82,7 @@
       <div class="carousel-item active">
         <div class="carousel-container">
 
-          
+
           <!-- <a href="" class="btn-get-started animated fadeInUp"></a> -->
 
           <h2 class="animated fadeInDown"><span>Dream.<br>Design.<br>Develop.</span></h2>
@@ -166,7 +166,7 @@
 
       </div>
     </section> End Services Section -->
-    <section class="why-us section-bg" data-aos="fade-up" date-aos-delay="200">
+    <section class="why-us" data-aos="fade-up" date-aos-delay="200">
       <center><h2 class="title"><span>Announ</span><span style="color: #68A4C4;">cements</span></h2></center>
       <div class="container">
 
@@ -189,7 +189,7 @@
 
 
     <!-- ======= Features Section ======= -->
-    <section class="features" id="about">
+    <section class="features section-bg" id="about">
       <div class="container">
 <center><h2 class="title" data-aos="fade-up"><span>About</span> <span style="color: #68A4C4;">Us</span></h2></center><br>
 
@@ -255,8 +255,11 @@ IMAGINEER’19 WINNER</p><br>
 IMAGINEER’19 WINNER</p>
           </div>
         </div>
-<section id="timeline">
+      </section><!-- End Features Section -->
+      </main><!-- End #main -->
+<section id="timeline" class="features">
         <!-- Event Schedule -->
+        <div class="container">
                 <div class="row" data-aos="fade-up">
 
     <div class="section">
@@ -342,6 +345,7 @@ IMAGINEER’19 WINNER</p>
       <!-- /container -->
     </div>
   </div></h3>
+</div>
 </section>
     <!-- /Event Schedule -->
         <!-- <div class="row" data-aos="fade-up">
@@ -365,8 +369,7 @@ IMAGINEER’19 WINNER</p>
         </div> -->
 
       </div>
-    </section><!-- End Features Section -->
-  </main><!-- End #main -->
+
 
   <!-- ======= Footer ======= -->
   <footer id="footer" data-aos="fade-up" data-aos-easing="ease-in-out" data-aos-duration="500">
