--- a/Moderna/index.html
+++ b/Moderna/index.html
@@ -45,9 +45,10 @@
     <div class="container">
 
       <div class="logo float-left">
-        <h1 class="text-light"><a href="index.html"><span>Imagineer</span></a></h1>
+        <!-- <h1 class="text-light"><a href="index.html"><span>Imagineer</span></a></h1> -->
         <!-- Uncomment below if you prefer to use an image logo -->
-        <!-- <a href="index.html"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
+         <a href="index.html"><img src="assets/img/imagineer_logo1.png"  class="img-fluid"></a>
+         <!-- <a href="index.html"><img src="assets/img/text.png" alt="" class="img-fluid"></a> -->
       </div>
 
       <nav class="nav-menu float-right d-none d-lg-block">
@@ -460,7 +461,7 @@ IMAGINEER’19 WINNER</p>
       <!-- You can delete the links only if you purchased the pro version. -->
       <!-- Licensing information: https://bootstrapmade.com/license/ -->
       <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/free-bootstrap-template-corporate-moderna/ -->
-      Designed by <a href="https://bootstrapmade.com/">Imagineer Website Team</a>
+      Designed by Imagineer Website Team
     </div>
     </div>
   </footer><!-- End Footer -->
