Changed image alignment

--- a/Moderna/index.html
+++ b/Moderna/index.html
@@ -196,7 +196,7 @@
 
 
         <div class="row" data-aos="fade-up">
-          <div class="col-md-5">
+          <div class="col-md-5 pt-4">
             <img src="assets/img/picture1.jpg" class="img-fluid" alt="">
           </div>
           <div class="col-md-7 pt-4">
@@ -212,10 +212,10 @@
         </div>
 
         <div class="row" data-aos="fade-up">
-          <div class="col-md-5 order-1 order-md-2">
+          <div class="col-md-5 order-1 order-md-2 pt-5">
             <img src="assets/img/throwback.jpg" class="img-fluid" alt="">
           </div>
-          <div class="col-md-7 pt-5 order-2 order-md-1 font-italic">
+          <div class="col-md-7 pt-5 order-2 order-md-1">
             <h3>Imagineer '19 Throwback</h3>
             <p class="font-italic">
               Imagineer ’19 aimed at tackling problems within the campus. These were the problem
@@ -240,7 +240,7 @@ then evaluated by a panel of seasoned judges.
         </div>
 
         <div class="row" data-aos="fade-up">
-          <div class="col-md-5">
+          <div class="col-md-5 pt-5">
             <img src="assets/img/test.jpg" class="img-fluid" alt="">
           </div>
           <div class="col-md-7 pt-5">
