--- a/Moderna/index.html
+++ b/Moderna/index.html
@@ -47,7 +47,7 @@
       <div class="logo float-left">
         <!-- <h1 class="text-light"><a href="index.html"><span>Imagineer</span></a></h1> -->
         <!-- Uncomment below if you prefer to use an image logo -->
-         <a href="index.html"><img src="assets/img/imagineer_logo1.png"  class="img-fluid"></a>
+         <a href="index.html"><img src="assets/img/imagineer_logo1.png" class="img-fluid"></a>
          <!-- <a href="index.html"><img src="assets/img/text.png" alt="" class="img-fluid"></a> -->
       </div>
 
@@ -86,7 +86,7 @@
 
           <!-- <a href="" class="btn-get-started animated fadeInUp"></a> -->
 
-          <h2 class="animated fadeInDown"><span>Dream.<br>Design.<br>Develop.</span></h2>
+          <h2 class="animated fadeInDown"><img src="assets/img/text.png" class="img-fluid"><br><span>Dream.<br>Design.<br>Develop.</span></h2>
           <p class="animated fadeInUp">Look around you, the problems are plenty. Look within you, the potential is immense.</p>
           <a href="https://forms.gle/s1FhiKdujQXJbBpE8" class="btn-get-started animated fadeInUp">REGISTER</a>
 
@@ -428,16 +428,7 @@ IMAGINEER’19 WINNER</p>
             </ul>
           </div> -->
 
-          <!-- <div class="col-lg-3 col-md-6 footer-links">
-            <h4>Our Services</h4>
-            <ul>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Web Design</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Web Development</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Product Management</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Marketing</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Graphic Design</a></li>
-            </ul>
-          </div> -->
+          
 
           <div id="contact" class="col-lg-3 col-md-6 footer-contact">
             <h4>Contact Us</h4>
@@ -451,17 +442,30 @@ IMAGINEER’19 WINNER</p>
             </p>
 
           </div>
+          <div class="col-lg-3 col-md-6 footer-links">
+            <img src="assets/img/acmLogo.jpg" class="img-fluid">
+            <!-- <h4>Our Services</h4>
+            <ul>
+              <li><i class="bx bx-chevron-right"></i> <a href="#">Web Design</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#">Web Development</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#">Product Management</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#">Marketing</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#">Graphic Design</a></li>
+            </ul> -->
+          </div>
 
-          <!-- <div class="col-lg-3 col-md-6 footer-info">
-            <h3>About Moderna</h3>
+          <div class="col-lg-3 col-md-6 footer-info">
+
+            <img src="assets/img/ISTElogo.png" class="img-fluid">
+            <!-- <h3>About Moderna</h3>
             <p>Cras fermentum odio eu feugiat lide par naso tierra. Justo eget nada terra videa magna derita valies darta donna mare fermentum iaculis eu non diam phasellus.</p>
             <div class="social-links mt-3">
               <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
               <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
               <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
               <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
-            </div>
-          </div> -->
+            </div> -->
+          </div>
 
         </div>
       </div>
