--- a/Moderna/index.html
+++ b/Moderna/index.html
@@ -442,8 +442,8 @@ IMAGINEER’19 WINNER</p>
             </p>
 
           </div>
-          <div class="col-lg-3 col-md-6 footer-links">
-            <img src="assets/img/acmLogo.jpg" class="img-fluid">
+          <!-- <div class="col-lg-3 col-md-6 footer-links">
+            <img src="assets/img/acmLogo.jpg" class="img-fluid"> -->
             <!-- <h4>Our Services</h4>
             <ul>
               <li><i class="bx bx-chevron-right"></i> <a href="#">Web Design</a></li>
@@ -452,11 +452,11 @@ IMAGINEER’19 WINNER</p>
               <li><i class="bx bx-chevron-right"></i> <a href="#">Marketing</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="#">Graphic Design</a></li>
             </ul> -->
-          </div>
+          <!-- </div> -->
 
-          <div class="col-lg-3 col-md-6 footer-info">
+          <!-- <div class="col-lg-3 col-md-6 footer-info"> -->
 
-            <img src="assets/img/ISTElogo.png" class="img-fluid">
+            
             <!-- <h3>About Moderna</h3>
             <p>Cras fermentum odio eu feugiat lide par naso tierra. Justo eget nada terra videa magna derita valies darta donna mare fermentum iaculis eu non diam phasellus.</p>
             <div class="social-links mt-3">
@@ -465,7 +465,7 @@ IMAGINEER’19 WINNER</p>
               <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
               <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
             </div> -->
-          </div>
+          <!-- </div> -->
 
         </div>
       </div>
