deleted useless files

--- a/Moderna/index.html
+++ b/Moderna/index.html
@@ -87,7 +87,7 @@
           <!-- <a href="" class="btn-get-started animated fadeInUp"></a> -->
 
           <h2 class="animated fadeInDown"><img src="assets/img/text.png" class="img-fluid"><br><span>Dream.<br>Design.<br>Develop.</span></h2>
-          <p class="animated fadeInUp">Look around you, the problems are plenty. Look within you, the potential is immense.</p>
+          <p class="animated fadeInUp">A mega collab hackathon hosted by ACM NITK and ISTE NITK</p>
           <a href="https://forms.gle/s1FhiKdujQXJbBpE8" class="btn-get-started animated fadeInUp">REGISTER</a>
 
         </div>
